<resources>
    <string name="app_name">UTS_D1041161016</string>
    <string name="btn_awal">AYO MULAI</string>
    <string name="datang_view">SELAMAT DATANG</string>
    <string name="bgAwal">bgAwal</string>
    <string name="services">Services</string>
    <string name="activity">Activity</string>
    <string name="user_permission">User Permission</string>
    <string name="content_provider">Content Provider</string>
    <string name="intent">Intent</string>
    <string name="link">Link</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
